UI fixes + dashboard date range
Fixed footer
Fixed settings page tables
Fixed settings page font sizes
Fixed scroll on sidebar when cut off

--- a/app/assets/stylesheets/partials/_footer.sass
+++ b/app/assets/stylesheets/partials/_footer.sass
@@ -8,7 +8,6 @@ footer
   position: fixed
   bottom: 0
   background-color: $secondary-color
-  height: 35px
   color: $primary-color
   ul
     padding-left: 0
